Fixed centered grid with left aligned, bit hacky :)

--- a/client/src/assets/styles/desktop.css
+++ b/client/src/assets/styles/desktop.css
@@ -134,7 +134,6 @@
       color: black;
       margin-top: 100px;
       margin-bottom: 50px;
-      margin-left: 20px;
     }
 
 
@@ -145,6 +144,14 @@
     .recipeList__link {
       width: 300px;
       margin: 10px;
+    }
+
+    .recipeList__link--container {
+      margin-bottom: 0;
+    }
+
+    .recipeList__hidden-2x2 {
+      display: none;
     }
 
     /***********************************************
@@ -234,4 +241,10 @@
       background: rgba(214, 71, 44, 0.95);
     }
 
+}
+
+@media (min-width:979px) {
+  .recipeList__hidden-2x2 {
+    display: block;
+  }
 }
